--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
     </div>
     <div class="players-container">
-        <div class="player player-1">
+        <div class="player player-1 active">
             <h1>Player 1</h1>
-            <div class="clicks">You clicked: <span class="click">0</span> times</div>
+            <div class="clicks">You have: <span class="el1">0</span> pair</div>
         </div>
         <div class="player player-2">
             <h1>Player 2</h1>
-            <div class="clicks">You clicked: <span class="click">0</span> times</div>
+            <div class="clicks">You clicked: <span class="el2">0</span> times</div>
         </div>
     </div>
 
