changed clicks in pair HTML

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="player player-2">
             <h1>Player 2</h1>
-            <div class="clicks">You clicked: <span class="el2">0</span> times</div>
+            <div class="clicks">You have: <span class="el2">0</span> pair</div>
         </div>
     </div>
 
