center H1 and changed colorL

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="module" defer src="script.js"></script>
     <title>Memory game</title>
 </head>
-<h1>Pick number of cars</h1>
+<h1 class="text-align">Pick number of cars</h1>
     <div class="numOfCards">
         
         <button class="btn">10</button>
