added animation for player images

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="module" defer src="script.js"></script>
     <title>Memory game</title>
 </head>
+<body>
     <h1 class="text-align">Pick number of cards</h1>
     <div class="numOfCards">
         
@@ -21,7 +22,7 @@
         <button class="btn">18</button>
         <button class="btn">20</button>
     </div>
-    <div class="temp">
+    <div class="game-container">
         <div class="player player-1 active">
             <img src="img/traktor.png" alt="">
             <h1>Davor</h1>
@@ -35,22 +36,6 @@
             <h1>Leonardo</h1>
             <div class="clicks">You have: <span class="el2">0</span> pair</div>
         </div>
-    </div>
-
-    <!-- <div class="players-container">
-        <div class="player player-1 active">
-            <img src="img/traktor.png" alt="">
-            <h1>PLAYER 1</h1>
-            <div class="clicks">You have: <span class="el1">0</span> pair</div>
-        </div>
-        <div class="player player-2">
-            <img src="img/bager.png" alt="">
-            <h1>PLAYER 2</h1>
-            <div class="clicks">You have: <span class="el2">0</span> pair</div>
-        </div>
-    </div> -->
-
-     
-    </body>
+    </div> 
 </body>
 </html>
