added play again functionality

--- a/index.html
+++ b/index.html
@@ -27,14 +27,16 @@
             <img src="img/traktor.png" alt="">
             <h1>Davor</h1>
             <div class="clicks">You have: <span class="el1">0</span> pair</div>
+            <p class="winnerText"></p>
         </div>
         <div class="cards-container">
-
+            <div class="playAgain"> <button class="btn">PLAY AGAIN</button></div>
         </div>
         <div class="player player-2">
             <img src="img/bager.png" alt="">
             <h1>Leonardo</h1>
             <div class="clicks">You have: <span class="el2">0</span> pair</div>
+            <p class="winnerText"></p>
         </div>
     </div> 
 </body>
