changed head content and player contenty

--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
     <title>Memory game</title>
 </head>
 <body>
-    <h1 class="text-align">Pick number of cards</h1>
-    <div class="numOfCards">
-        
-        <button class="btn">10</button>
-        <button class="btn">12</button>
-        <button class="btn">14</button>
-        <button class="btn">16</button>
-        <button class="btn">18</button>
-        <button class="btn">20</button>
+    <div class="pickGame">
+        <h1>Pick number of cards</h1>
+        <div class="numOfCards">
+            
+            <button class="btn">10</button>
+            <button class="btn">12</button>
+            <button class="btn">14</button>
+            <button class="btn">16</button>
+            <button class="btn">18</button>
+            <button class="btn">20</button>
+        </div>
     </div>
+
     <div class="game-container">
         <div class="player player-1 active">
             <img src="img/traktor.png" alt="">
